main/bin/main.91252.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
In file included from /home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:1:
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/models.h:43:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:18:16: error: implicit declaration of function 'rand_mt' is invalid in OpenCL
    double i = rand_mt();
               ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:18:16: note: did you mean 'ranf_mt'?
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/rand.h:4:8: note: 'ranf_mt' declared here
double ranf_mt();
       ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:19:21: error: expected ')'
    printf("%f\n", i;
                    ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:19:11: note: to match this '('
    printf("%f\n", i;
          ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
